Fixed multer in movies apis
